--- a/.gitignore
+++ b/.gitignore
@@ -112,3 +112,24 @@ venv.bak/
 .mypy_cache/
 .dmypy.json
 dmypy.json
+
+.DS_Store
+.AppleDouble
+.LSOverride
+Icon[]
+
+._*
+
+.DocumentRevisions-V100
+.fseventsd
+.Spotlight-V100
+.TemporaryItems
+.Trashes
+.VolumeIcon.icns
+.com.apple.timemachine.donotpresent
+
+.AppleDB
+.AppleDesktop
+Network Trash Folder
+Temporary Items
+.apdisk
